fixes small bug with scrollbar in team info div

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 
 #teamInfoDiv {
   height: 84vh;
-  overflow: scroll;
+  overflow: auto;
   width: 95%;
   /* scroll-padding-left: 4px; */
 }
